--- a/HechtCommunity/HechtCommunity/HechtCommunity.Android/Properties/AndroidManifest.xml
+++ b/HechtCommunity/HechtCommunity/HechtCommunity.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.HechtCommunity">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="HechtCommunity">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="HechtCommunity.Android"></application>
+    <application android:label="@string/app_name"></application>
 </manifest>
