--- a/HechtCommunity/HechtCommunity/HechtCommunity/HechtCommunity.csproj
+++ b/HechtCommunity/HechtCommunity/HechtCommunity/HechtCommunity.csproj
@@ -14,4 +14,19 @@
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="CoworkingPage.xaml.cs">
+      <DependentUpon>CoWorkingPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="CoWorkingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="CoWorkingStubePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
